finished horizontal scroll, lazy loading of both now playing and popular section. issue with 429 error also fixed - it is not possible to get the runtime on the front page

--- a/css/popular.css
+++ b/css/popular.css
@@ -19,7 +19,7 @@
 
 .movie__title{
     text-decoration: none;
-    color: black;
+    color: light-dark(var(--dark-color), var(--light-color));
     font-size: 0.875rem;
     font-weight: bold;
 }
